name:                  garrulous
version:               0.1.0.0
synopsis:              A chat service for friends
description:           Standalone chat server
homepage:              bitemyapp.com
license:               MIT
license-file:          LICENSE
author:                Chris Allen
maintainer:            cma@bitemyapp.com
copyright:             2014, Chris Allen
category:              Network
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Chat.Garrulous
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && <5
  default-language:    Haskell2010

executable garrulous
  ghc-options:         -Wall -threaded
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       garrulous,
                       base >= 4.7 && <5
  default-language:    Haskell2010
